--- a/config.example.json
+++ b/config.example.json
@@ -1,7 +1,7 @@
 {
-  "channelName": "cli-stream",
+  "channelName": "CLI-tool",
   "spacebro": {
-    "address": "localhost",
+    "address": "127.0.0.1",
     "port": 8888
   }
 }
