--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spacebro-client-CLI",
+  "name": "spacebro-client-cli",
   "version": "1.1.0",
   "description": "Command Line Interface for spacebro-client",
   "main": "index.js",
