📚 update README, fixes #5, add contributor field to package.json, fixes #8

--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "cli"
   ],
   "author": "Soixante circuits",
+  "contributors":[
+    "4quet",
+    "hugohil (http://hugohil.tech/)",
+    "gabrielstuff (http://soixantecircuits.fr)"
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/soixantecircuits/spacebro-client-cli/issues"
