--- a/package.json
+++ b/package.json
@@ -33,8 +33,8 @@
   },
   "homepage": "https://github.com/soixantecircuits/spacebro-client-cli#readme",
   "dependencies": {
-    "spacebro-client": "0.3.2",
-    "standard-settings": "1.1.6",
+    "spacebro-client": "^0.3.4",
+    "standard-settings": "^1.1.7",
     "vorpal": "^1.12.0"
   }
 }
