:bug: Fix settings.default.json

--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -1,10 +1,10 @@
 {
-  "server": {
+  "service": {
     "spacebro": {
       "address": "localhost",
       "port": 8888,
-      "client" : "spacebro-client-CLI",
-      "channel": "galaxy"
+      "channel": "galaxy",
+      "client" : "spacebro-client-CLI"
     }
   }
 }
