--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "spacebro-client": "./index.js"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "lint": "eslint --ext .js index.js"
   },
   "repository": {
     "type": "git",
@@ -36,5 +37,16 @@
     "spacebro-client": "^0.3.4",
     "standard-settings": "^1.1.7",
     "vorpal": "^1.12.0"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^5.1.0",
+    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-loader": "^1.3.0",
+    "eslint-plugin-html": "^1.3.0",
+    "eslint-plugin-promise": "^1.0.8",
+    "eslint-plugin-standard": "^1.3.2",
+    "eslint-plugin-import": "^2.3.0",
+    "eslint-plugin-node": "^5.0.0"
   }
 }
