:writing_hand: Rename to clibro and update README

--- a/settings/settings.default.json
+++ b/settings/settings.default.json
@@ -4,7 +4,7 @@
       "address": "localhost",
       "port": 8888,
       "channel": "galaxy",
-      "client" : "spacebro-client-CLI"
+      "client": "clibro"
     }
   }
 }
