--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "spacebro-client-cli",
+  "name": "clibro",
   "version": "1.2.2",
   "description": "Command Line Interface for spacebro-client",
   "main": "index.js",
