--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
   },
   "scripts": {
     "start": "node index.js",
+    "test": "npm run lint && npm run unittest",
     "lint": "eslint --ext .js tests index.js",
-    "test": "ava tests/*.js --verbose --timeout=2s",
-    "test:watch": "ava tests/*.js --verbose --watch --timeout=2s",
+    "unittest": "ava tests/*.js --verbose --timeout=2s",
+    "unittest:watch": "ava tests/*.js --verbose --watch --timeout=2s",
     "ava": "ava --verbose --timeout=2s"
   },
   "repository": {
