--- a/package.json
+++ b/package.json
@@ -38,9 +38,9 @@
   },
   "homepage": "https://github.com/soixantecircuits/spacebro-client-cli#readme",
   "dependencies": {
-    "spacebro-client": "^0.3.4",
-    "standard-settings": "^1.1.7",
-    "vorpal": "^1.12.0"
+    "spacebro-client": "0.4.6",
+    "standard-settings": "1.1.15",
+    "vorpal": "1.12.0"
   },
   "devDependencies": {
     "ava": "^0.19.1",
